Logo added & header whitespace fixed.

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -6,5 +6,21 @@ body {
     flex-direction: column;
     align-items: stretch;
     min-height: 100vh;
-    min-width: 680px;
 }
+
+/* Scrollbar */
+::-webkit-scrollbar {               // width
+    width: 10px;
+  }
+  
+  ::-webkit-scrollbar-track {       // track
+    background: #f1f1f1;
+  }
+  
+  ::-webkit-scrollbar-thumb {       // thumb
+    background: #888;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover { // thumb::hover
+    background: #555;
+  }
