--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -25,6 +25,10 @@
 }
 
 .site-tabs {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
@@ -111,18 +115,21 @@
     margin-bottom: 2px;
 }
 
+
+
 /* HOME STYLESHEET */
 .home-header {
     display: flex;
     flex-direction: column;
     align-items: stretch;
 
-    height: 40vh;
+    height: 50vh;
+
     overflow: hidden;
     
-    background-image: url('../images/home-header.jpg');
+    background-image: url('../images/header.jpg');
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: cover;
     background-position-y: 40%;
     background-position-x: 50%;
 
@@ -130,7 +137,7 @@
 }
 
 .home-nav {
-    padding: 10px 10px 0px 10px;
+    padding: 15px 15px 0px 15px;
     background-color: transparent;
 
     display: flex;
@@ -146,13 +153,17 @@
 }
 
 .home-tabs {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
     font-size: 24px;
 }
 
 .home-tabs a {
-    padding: 0px 10px;
+    padding: 0px 0px 0px 20px;
 
     /* Disable selection. */
     user-select: none;
@@ -208,13 +219,21 @@
 }
 
 .home-programming {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
     overflow:inherit;
     background-image: url('../images/home-programming.jpg');
     background-size: 100%;
     height: 50vh;
 }
 
-.home-programming h1 {
+.home-programming-header {
+
+}
+
+.home-programming-header h1 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0px;
 }
 
@@ -275,13 +294,46 @@
 }
 
 .home-footer {
-    height: 5vh;
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    justify-content: space-between;
 
-    background-image: url('../images/home-header.jpg');
+    border-top: solid black 10px;
+
+    background-image: url('../images/header.jpg');
     background-repeat: no-repeat;
     background-size: 100%;
     background-position-x: 50%;
     background-position-y: 80%;
 
-    border-top: solid black 10px;
+    height: 50px;
+    padding: 0px 20px;
+}
+
+.home-footer-text {
+    color: white;
+    font-weight: bold;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 12px;
+
+    /* Disable selection. */
+    user-select: none;
+    -ms-user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+
+    padding-top: 1vh;
+}
+
+.home-footer-logo {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.home-footer a {
+    padding: 0px 0px 0px 20px;
 }
